<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:contentDescription="@string/image"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/tell_your_worry"
            android:textSize="@dimen/sp34" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:gravity="center"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worries"
            android:textSize="@dimen/sp30"
            android:textColor="@color/gray2" />

        <TextView
            android:id="@+id/defeated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defeated_worries"
            android:textSize="@dimen/sp30"
            android:textColor="@color/gray2"
            android:layout_marginVertical="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security"
            android:textSize="@dimen/sp30"
            android:textColor="@color/gray2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_with_friends"
            android:textSize="@dimen/sp30"
            android:textColor="@color/gray2"
            android:layout_marginTop="40dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>