<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoneActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:contentDescription="@string/image"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/i_will_worry_for_you"
            android:textSize="@dimen/sp27" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/image"
            android:src="@drawable/cat_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tochki"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp30"
            android:text="@string/now_this_worry_with_me"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp27" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ok"
        android:layout_width="240dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="@dimen/sp27" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>