<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="325dp"
        android:layout_height="130dp"
        android:layout_marginTop="256dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worry_cats"
            android:textSize="@dimen/sp34" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/tell_your_worry"
            android:textSize="@dimen/sp36" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/next"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="290dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/forward"
            android:contentDescription="@string/image"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>